src/objects/TDR_Activity__c.object
<CustomObject>
    <fields>
        <fullName>Activity_Conducted__c</fullName>
        <description>The activity conducted by the TDR</description>
        <label>Activity Conducted</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Activity_Latitude__c</fullName>
        <defaultValue>&quot;NONE&quot;</defaultValue>
        <description>The latitude that the activity was carried out. The GPS captured on the form</description>
        <label>Activity Latitude</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Longitude__c</fullName>
        <defaultValue>&quot;NONE&quot;</defaultValue>
        <description>The longitude that the activity was carried out. The GPS location captured on the form</description>
        <label>Activity Longitude</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <description>The type of activity that the TDR has carried out</description>
        <label>Activity Type</label>
        <picklist>
            <picklistValues>
                <fullName>MM Agent Full Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MM Agent Short Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Support</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Additional_Comments__c</fullName>
        <description>Any additional comments made by a TDR for the daily activity</description>
        <label>Additional Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <description>Any comment made by the TDR on this activity</description>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <description>The name of the company that this activity was with</description>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <description>The name of the contact that this activity was carried out with</description>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duplicate_Submission__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Check field to see if this activity has been submitted before</description>
        <label>Duplicate Submission</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <description>The time that the TDR finished the activity</description>
        <label>End Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <description>The start time of this activity</description>
        <label>Start Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TDR_Performance_Record__c</fullName>
        <description>The daily performance record that this activity is attached to.</description>
        <inlineHelpText>This should only ever be a DAILY TDR Performance Record</inlineHelpText>
        <label>TDR Performance Record</label>
        <referenceTo>TDR_Performance__c</referenceTo>
        <relationshipLabel>TDR Activites</relationshipLabel>
        <relationshipName>TDR_Activites</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>eFloat__c</fullName>
        <description>The eFloat value found in the MM Short Report. Only valid for the Short Report type</description>
        <label>eFloat</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>TDR Activity</label>
    <nameField>
        <displayFormat>TDR-DA-{YY}-{MM}-{DD}-{00000000}</displayFormat>
        <label>TDR Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TDR Activites</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>